Change log for Bos Wars
-----------------------

Development version:
- Add the bottleneck map (Kyran Jackson)
- Make GLMaxTextureSize configurable for systems where the value reported
  by OpenGL causes slow displays (Kalle Olavi Niemitalo)
- Add the Go-East map (Michiel van der Wulp)
- Added a new background image for the swindler campaign (Johannes Engelhardt, Francois Beerten)
- Add the lava-river map (Michiel van der Wulp)
- Add the Swindler campaign (Francois Beerten and Ruben Diaz)
- Fix teams in UnSelectUnit (Kalle Olavi Niemitalo)
- Removed broken elites campaign and maps (Francois Beerten)
- Add code for dumping all received SDL events to stdout
  (Kalle Olavi Niemitalo)
- Work around bug #27982 mouse centered when clicking in the window after
  having left. (Kalle Olavi Niemitalo and Francois Beerten)
- Fix bug #25178 in patch editor; mouse placement confusion (Jimmy Salmon)
- Nukes target the center of the target. (Jann Horn)
- Fix use of settings from pkg-config in SCons. (Francois Beerten)
- Replace the deprecated SCons Options class by Variables.
  This requires SCons 0.98.1 or higher. (Francois Beerten)
- Replace the deprecated SCons calls to env.Copy by calls to env.Clone.
  This requires SCons 0.96.93 or higher. (Francois Beerten)
- Remove incomplete Dorcoz unit (Francois Beerten)
- Fix header includes for GCC 4.4 (Francois Beerten)
- Add the "grass" set of patches (Johannes Engelhardt)
- Added undo and redo to the editor (Jimmy Salmon)
- Add new defeat background graphic (Johannes Engelhardt)
- Quick drawing in the main menus (Jimmy Salmon)
- Added patch support to the editor (Jimmy Salmon)
- Add the heli unit (Johannes Engelhardt and Francois Beerten)
- Add the big gun turret (Johannes Engelhardt and Francois Beerten)
- Support lua 5.1 only (Jimmy Salmon and Francois Beerten)
- New patch based map system (Jimmy Salmon)

Version 2.5.1:
- Fixed crash in savegames with destroyed buildings seen by other players (Jimmy Salmon)
